change to master

--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -9,7 +9,7 @@ name: OpenWrt-CI
 
 on:
   schedule:
-    - cron: 10 18 * * *
+    - cron: 23 23 * * *
   release:
     types: [published]
     
@@ -34,7 +34,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ref: mi4a
+          ref: master
 
       - name: Space cleanup
         env:
